<resources>
    <string name="app_name">Maestro_App</string>
    <string name="type_your_id">TYPE YOUR ID</string>
    <string name="password_txt">TYPE YOUR PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="not_found">ID or Password are not correct</string>
    <string name="log_out_txt">LOG OUT</string>
    <string name="e_mail_txt">E-MAIL</string>
    <string name="schedule_txt">SCHEDULE:</string>
    <string name="view_students_txt">VIEW STUDENTS</string>
    <string name="students_list_txt">Students List</string>
    <string name="partial_l_txt">Partial l</string>
    <string name="partial_ll_txt">Partial ll</string>
    <string name="partial_lll_txt">Partial lll</string>
    <string name="apply_txt">APPLY</string>
    <string name="edit_txt">EDIT</string>
    <string name="type_your_first_lastname">TYPE YOUR FIRST LASTNAME</string>
    <string name="second_lastname_txt">TYPE YOUR SECOND LASTNAME</string>
    <string name="email_txt">TYPE YOUR EMAIL</string>
    <string name="name_txt">TYPE YOUR NAME</string>
    <string name="update_user_txt">UPDATE USER</string>
    <string name="user_txt">UPDATE YOUR USER</string>
</resources>