<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        tools:context=".presentation.edtaccount.EditFragment">

        <TextView
            android:id="@+id/txvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_txt"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/edtName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:hint="@string/name_txt"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/edtFirst"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtFirst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/type_your_first_lastname"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@id/edtSecond"
            app:layout_constraintEnd_toEndOf="@id/edtName"
            app:layout_constraintStart_toStartOf="@id/edtName"
            app:layout_constraintTop_toBottomOf="@id/edtName" />

        <EditText
            android:id="@+id/edtSecond"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/second_lastname_txt"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@id/edtMail"
            app:layout_constraintEnd_toEndOf="@id/edtFirst"
            app:layout_constraintStart_toStartOf="@id/edtFirst"
            app:layout_constraintTop_toBottomOf="@id/edtFirst" />

        <EditText
            android:id="@+id/edtMail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/email_txt"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@id/btnRegister"
            app:layout_constraintEnd_toEndOf="@id/edtSecond"
            app:layout_constraintStart_toStartOf="@id/edtSecond"
            app:layout_constraintTop_toBottomOf="@id/edtSecond" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update_user_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/edtMail"
            app:layout_constraintStart_toStartOf="@id/edtMail"
            app:layout_constraintTop_toBottomOf="@id/edtMail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>