<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

      <data>

           <variable
               name="student"
               type="com.poapm.maestro_app.domain.model.DetailClass" />

      </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.studentDetail.studentDetailFragment">

        <ImageView
            android:id="@+id/imgStudent"
            loadFromUrl2="@{student.student.urlStudent}"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/txvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{student.student.nameStudent}"
            android:layout_marginStart="40dp"
            android:textSize="19sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/imgStudent"
            app:layout_constraintTop_toBottomOf="@id/imgStudent"
            tools:text="Luisa" />

        <TextView
            android:id="@+id/txvLast1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="@{student.student.lastnameF}"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/txvLast2"
            app:layout_constraintStart_toEndOf="@id/txvName"
            app:layout_constraintTop_toTopOf="@id/txvName"
            tools:text="Perez" />

        <TextView
            android:id="@+id/txvLast2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{student.student.lastnameS}"
            android:textSize="19sp"
            android:textAlignment="center"
            android:layout_marginEnd="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/imgStudent"
            app:layout_constraintTop_toTopOf="@id/txvName"
            tools:text="Villa" />

        <TextView
            android:id="@+id/txvMail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@{`Email: ` + student.student.mailStd}"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toStartOf="@id/txvLast2"
            app:layout_constraintStart_toEndOf="@id/txvGrade1"
            app:layout_constraintTop_toBottomOf="@+id/txvLast1"
            tools:text="Email" />

        <TextView
            android:id="@+id/txvGrade1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/partial_l_txt"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/imgStudent"
            app:layout_constraintTop_toBottomOf="@id/imgStudent"
            tools:text="Partial l" />

        <TextView
            android:id="@+id/txvGrade2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/partial_ll_txt"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/txvLast2"
            app:layout_constraintStart_toEndOf="@id/txvGrade1"
            app:layout_constraintTop_toTopOf="@id/txvGrade1"
            tools:text="Partial ll" />

        <TextView
            android:id="@+id/txvGrade3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/partial_lll_txt"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/imgStudent"
            app:layout_constraintTop_toTopOf="@id/txvGrade1"
            tools:text="Partial lll" />

        <EditText
            android:id="@+id/edtGrade1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:inputType="number"
            android:textAlignment="center"
            android:text="@{``+ student.p1}"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@id/imgStudent"
            app:layout_constraintTop_toBottomOf="@id/imgStudent"
            tools:text="10" />

        <EditText
            android:id="@+id/edtGrade2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@{``+student.p2}"
            app:layout_constraintEnd_toStartOf="@id/txvLast2"
            app:layout_constraintStart_toEndOf="@id/edtGrade1"
            app:layout_constraintTop_toTopOf="@id/edtGrade1"
            tools:text="10" />

        <EditText
            android:id="@+id/edtGrade3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@{``+student.p3}"
            android:inputType="number"
            android:textAlignment="center"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@id/imgStudent"
            app:layout_constraintTop_toTopOf="@id/edtGrade1"
            tools:text="10" />

        <Button
            android:id="@+id/btnCal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/apply_txt"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>